# bittorrent_client

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  build.cmd  clang-tidy_local.bat  how_to_build.md  vcpkg.json
src/: CMakeLists.txt
src/bencoding/: CMakeLists.txt
src/bencoding/include/bencoding/: ScopeGuard.h  be_element_ref.h  be_element_ref_builders.h  be_element_ref_decoder.h  be_element_ref_parse.h  be_errors.h  be_parse_utils.h  be_torrent_file_metainfo.h  be_torrent_file_parse.h  be_tracker_response_parse.h  utils_read_file.h  utils_string.h
src/bencoding/src/: be_element_ref.cpp  be_element_ref_decoder.cpp  be_element_ref_parse.cpp  be_errors.cpp  be_torrent_file_metainfo.cpp  be_torrent_file_parse.cpp  be_tracker_response_parse.cpp
src/bittorrent_client/: CMakeLists.txt  asio_outcome_as_result.hpp  client_errors.h  main.cpp  torrent_client.cpp  torrent_client.h  torrent_messages.cpp  torrent_messages.h  tracker_requests.cpp  tracker_requests.h  utils_asio.h  utils_endian.h  utils_http.cpp  utils_http.h  utils_outcome.h
src/small_utils/: CMakeLists.txt
src/small_utils/include/small_utils/: utils_bytes.h  utils_experimental.h  utils_read_file.h  utils_string.h  utils_url.h
src/small_utils/src/: utils_bytes.cpp  utils_read_file.cpp  utils_url.cpp
src/test_bencoding/: CMakeLists.txt  test_be_parse.cpp  test_torrent_parse.cpp
src/test_small_utils/: CMakeLists.txt  test_small_utils.cpp
src/tests/: CMakeLists.txt
src/tests/test_bencoding/: CMakeLists.txt  test_be_decode.cpp  test_be_element_ref.cpp  test_be_parse.cpp  test_torrent_parse.cpp
src/tests/test_small_utils/: CMakeLists.txt  test_small_utils.cpp
src/u_bittorrent_client/: CMakeLists.txt  as_result.hpp  client_errors.cpp  client_errors.h  leaf_co_asio_wrapper.h  main.cpp  torrent_client.cpp  torrent_client.h  torrent_messages.cpp  torrent_messages.h  utils_http.cpp  utils_http.h
src/uuu_bittorrent_client/: CMakeLists.txt  main.cpp  torrent_client.h
